{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 162,
  "lineage": "376ebed3-f7a3-845d-586b-481379f89ae3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a3de0c59fd0551c",
            "arn": "arn:aws:ec2:us-east-1:461637793454:elastic-ip/eipalloc-08a3de0c59fd0551c",
            "domain": "vpc",
            "id": "eipalloc-08a3de0c59fd0551c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-13-216-93-197.compute-1.amazonaws.com",
            "public_ip": "13.216.93.197",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Apache-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c614dee691cbbf37",
            "arn": "arn:aws:ec2:us-east-1:461637793454:instance/i-0716fbc7d9f578d49",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0716fbc7d9f578d49",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02254c5cbe43304d6",
            "private_dns": "ip-10-0-1-18.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08fae5489d971ba1d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd1731c7aab9f220",
            "tags": {
              "Name": "Apache-EC2"
            },
            "tags_all": {
              "Name": "Apache-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-083af0c504d544a2f"
            ]
          },
          "dependencies": [
            "aws_security_group.security_group_apache",
            "aws_subnet.Private_sub",
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c614dee691cbbf37",
            "arn": "arn:aws:ec2:us-east-1:461637793454:instance/i-0adebea14af71a9d8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0adebea14af71a9d8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08bdc8aeeafb571e8",
            "private_dns": "ip-10-0-0-78.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.78",
            "public_ip": "18.208.199.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c0e064338a71ef99",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07eb19b12fd885c54",
            "tags": {
              "Name": "My-webapp-ec2"
            },
            "tags_all": {
              "Name": "My-webapp-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c446445ca2e1d800"
            ]
          },
          "dependencies": [
            "aws_security_group.security_group_myapp",
            "aws_subnet.Public_sub",
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Internet_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461637793454:internet-gateway/igw-0513461c333c48fc1",
            "id": "igw-0513461c333c48fc1",
            "owner_id": "461637793454",
            "tags": {
              "Name": "Internet_Gateway"
            },
            "tags_all": {
              "Name": "Internet_Gateway"
            },
            "vpc_id": "vpc-0451652acdacd4723"
          },
          "dependencies": [
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a3de0c59fd0551c",
            "association_id": "eipassoc-02eeccbb16d060854",
            "connectivity_type": "public",
            "id": "nat-0300ddb2718bd3c71",
            "network_interface_id": "eni-08e7b8be6d85a7a5f",
            "private_ip": "10.0.0.242",
            "public_ip": "13.216.93.197",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07eb19b12fd885c54",
            "tags": {
              "Name": "NAT_GW"
            },
            "tags_all": {
              "Name": "NAT_GW"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.Internet_GW",
            "aws_subnet.Public_sub",
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461637793454:route-table/rtb-001898c597345f582",
            "id": "rtb-001898c597345f582",
            "owner_id": "461637793454",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0300ddb2718bd3c71",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-private-crt"
            },
            "tags_all": {
              "Name": "prod-private-crt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0451652acdacd4723"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.Internet_GW",
            "aws_nat_gateway.NAT_GW",
            "aws_subnet.Public_sub",
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461637793454:route-table/rtb-0d13d7993bdf25ba9",
            "id": "rtb-0d13d7993bdf25ba9",
            "owner_id": "461637793454",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0513461c333c48fc1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_RT"
            },
            "tags_all": {
              "Name": "Public_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0451652acdacd4723"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Internet_GW",
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a27e7ef8525fd7e2",
            "route_table_id": "rtb-001898c597345f582",
            "subnet_id": "subnet-0fd1731c7aab9f220"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.Internet_GW",
            "aws_nat_gateway.NAT_GW",
            "aws_route_table.Private_RT",
            "aws_subnet.Private_sub",
            "aws_subnet.Public_sub",
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02139640fbf77f3d2",
            "route_table_id": "rtb-0d13d7993bdf25ba9",
            "subnet_id": "subnet-07eb19b12fd885c54"
          },
          "dependencies": [
            "aws_internet_gateway.Internet_GW",
            "aws_route_table.Public_RT",
            "aws_subnet.Public_sub",
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_apache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461637793454:security-group/sg-083af0c504d544a2f",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-083af0c504d544a2f",
            "ingress": [],
            "name": "security_group_apache",
            "name_prefix": "",
            "owner_id": "461637793454",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security_group_apache"
            },
            "tags_all": {
              "Name": "security_group_apache"
            },
            "timeouts": null,
            "vpc_id": "vpc-0451652acdacd4723"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_myapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461637793454:security-group/sg-0c446445ca2e1d800",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0c446445ca2e1d800",
            "ingress": [],
            "name": "security_group_myapp",
            "name_prefix": "",
            "owner_id": "461637793454",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security_group_myapp"
            },
            "tags_all": {
              "Name": "security_group_myapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0451652acdacd4723"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461637793454:subnet/subnet-0fd1731c7aab9f220",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd1731c7aab9f220",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "461637793454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_subnet"
            },
            "tags_all": {
              "Name": "Private_subnet"
            },
            "vpc_id": "vpc-0451652acdacd4723"
          },
          "dependencies": [
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461637793454:subnet/subnet-07eb19b12fd885c54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07eb19b12fd885c54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "461637793454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_subnet"
            },
            "tags_all": {
              "Name": "Public_subnet"
            },
            "vpc_id": "vpc-0451652acdacd4723"
          },
          "dependencies": [
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461637793454:vpc/vpc-0451652acdacd4723",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cbd02e3d830b27cf",
            "default_route_table_id": "rtb-085ac36117c8a359d",
            "default_security_group_id": "sg-0682c1b37ec7c41a5",
            "dhcp_options_id": "dopt-0833f89ac00c9e57a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0451652acdacd4723",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-085ac36117c8a359d",
            "owner_id": "461637793454",
            "tags": {
              "Name": "vpc01"
            },
            "tags_all": {
              "Name": "vpc01"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "myapp_engress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461637793454:security-group-rule/sgr-09ffdbc94187dbb37",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-09ffdbc94187dbb37",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c446445ca2e1d800",
            "security_group_rule_id": "sgr-09ffdbc94187dbb37",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group_myapp",
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "Apache_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461637793454:security-group-rule/sgr-043162db5623bb071",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-043162db5623bb071",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-083af0c504d544a2f",
            "security_group_rule_id": "sgr-043162db5623bb071",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group_apache",
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "myapp_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461637793454:security-group-rule/sgr-0a2276c6319a5958c",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0a2276c6319a5958c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c446445ca2e1d800",
            "security_group_rule_id": "sgr-0a2276c6319a5958c",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group_myapp",
            "aws_vpc.vpc01"
          ]
        }
      ]
    }
  ]
}